Add views for CRUD. NLog configured. Changes in CommonNinject (Just to make it work)

--- a/Vocabulary.WEB/Views/Example/GetAll.cshtml
+++ b/Vocabulary.WEB/Views/Example/GetAll.cshtml
@@ -18,7 +18,7 @@
                 </div>
                 <div class="card-action">
                     <a href="@Url.RouteUrl(new {controller = "Example", action = "Edit"})">Edit</a>
-                    <a href="@Url.RouteUrl(new {controller = "Example", action = "Delete"})">Delete</a>
+                    <a href="@Url.RouteUrl(new {controller = "Example", action = "Delete", id = example.Id})">Delete</a>
                 </div>
             </div>
         }
