--- a/Vocabulary.WEB/Views/Home/Index.cshtml
+++ b/Vocabulary.WEB/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
                 </p>
             </div>
             <div class="card-action">
-                <a href="@Url.RouteUrl(new {controller = "Example", action = "Get"})">Get all</a>
+                <a href="@Url.RouteUrl(new {controller = "Example", action = "GetAll"})">Get all</a>
                 <a href="@Url.RouteUrl(new {controller = "Example", action = "Create"})">Create new</a>
             </div>
         </div>
